FBINTF Change Log  version          (1.4-6 Build 1241) Sat, 9 Aug 2025 12:48:01 +0100

1. In Firebird 4 or later, large fixed point real numbers (e.g. NUMERIC(34,4)) are supported 
   using 128 bit integers approprately scaled. In FBIntf, numbers this large are handled using 
   the BCD data type. FBIntf uses the Firebird client library to convert a BCD (expressed as a 
   formatted string) to Firebird's internal record format and vice versa. It has been reported 
   that there can be a mis-match between the decimal separator used by the Firebird Client Library 
   and that used by FBIntf, resulting in either a range error or a missing decimal point. In 
   order to avoid this problem, the FBIntf large integer handling has been updated to remove any 
   dependency on the decimal separator used by the Firebird Client Library.

FBINTF Change Log  version          (1.4-5 Build 1242) Sun, 30 Mar 2025 11:20:17 +0100

1. TSQLParam.Clear now resets the SQL Type (if it was changed when setting the param)
   and zeroes the data if not nullable - otherwise parameter value is set to null.

2. TSQLParam.InternalSetString now clears the param before setting the value (also see above).
   This avoids problems arising from re-using a prepared query and Blob text string optimisation.

3. When IStatement.Prepare is executed the underlying data structures are freed and then
   re-created thus ensuring that there are no "left overs" from a previous use.

4. Test Plan updated (Test 6) to include test for Blob text string optimisation i.e. shorter
   strings transferred as inline text rather than as separate blobs.

5. Blob string optimisation for SQL_TEXT now takes into account char set width.

FBINTF Change Log  version          (1.4-4 Build 1238) Mon, 20 Jan 2025 11:45:29 +0000

1. FB30Blob. Removed unnecessary Firebird.IAttachment.release from close and cancel methods
   when operation does not result in an error.
